--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: APIs for Humans
 logo: common/site-logo.png
 search: false
-url: http://www.apispots.com
+url: http://chefarchitect.github.io/apispots
 
 # Jekyll configuration
 
