Fixed social links

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ owner:
   avatar: authors/chris.jpg
   email: chrysanthos.spiliotopoulos@gmail.com
   disqus-shortname: thechefarchitect
-  twitter: chefArchitect
-  github: https://github.com/chefArchitect
-  linkedin: chefarchitect
+  twitter: chrisspilio
+  github: https://github.com/spilio
+  linkedin: spilio
   google:
     analytics: UA-57180016-1
