--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: APIs for Humans
 logo: common/site-logo.png
 search: false
-url: https://apispots.github.io/apispots/
+url: https://apispots.github.io
 
 # Jekyll configuration
 
