--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -35,8 +35,8 @@ owner:
   avatar: authors/chris.jpg
   email: chrysanthos.spiliotopoulos@gmail.com
   disqus-shortname: thechefarchitect
-  twitter: chrisspilio
-  github: https://github.com/spilio
+  twitter: apispots
+  github: https://github.com/apispots
   linkedin: spilio
   google:
     analytics: UA-57180016-1
