--- a/package.json
+++ b/package.json
@@ -32,38 +32,12 @@
     "test": "./node_modules/cucumber/bin/cucumber.js --require src/lib/cucumber --format progress-bar test"
   },
   "dependencies": {
-    "async": "^2.5.0",
-    "axios": "^0.16.2",
-    "cucumber": "^2.3.1",
-    "d3": "^4.10.0",
-    "d3-hierarchy": "^1.1.5",
-    "good": "^7.2.0",
-    "good-console": "^6.4.0",
     "handlebars": "^4.0.10",
     "handlebars-loader": "^1.5.0",
-    "hapi": "^16.5.0",
-    "hapi-swaggered": "^2.9.0",
-    "hapi-swaggered-ui": "^2.6.0",
     "helper-markdown": "^1.0.0",
-    "hoek": "^4.2.0",
-    "html-loader": "^0.5.0",
-    "inert": "^4.2.0",
-    "joi": "^10.6.0",
-    "js-yaml": "^3.9.0",
-    "lodash": "^4.17.4",
-    "lodash.clonedeep": "^4.5.0",
-    "nconf": "^0.8.4",
-    "postal": "^2.0.5",
-    "request": "^2.81.0",
     "semantic-ui-css": "^2.2.10",
-    "strformat": "0.0.7",
-    "strings.js": "^1.3.2",
     "swagger-client": "^3.0.19",
-    "sweetalert2": "^6.6.6",
-    "unirest": "^0.5.1",
-    "vis": "^4.20.1",
-    "vision": "^4.1.1",
-    "winston": "^2.3.1"
+    "sweetalert2": "^6.6.6"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
