Documented data stories

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -23,4 +23,4 @@
   description: Interact with APIs through a human friendly layer
   pages:
     - title: Introduction
-      url: /docs/openapis/
+      url: /docs/datastories/
