Added release info for v2.3.1

--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,3 +1,10 @@
+- version: 2.3.1
+  items:
+    - title: Increased modal to fullscreen size
+      type: enhancement
+    - title: CSV media type enabled by default
+      type: bugfix
+
 - version: 2.3.0
   items:
     - title: JSON response viewer
