--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ owner:
   disqus-shortname: thechefarchitect
   twitter: apispots
   github: https://github.com/apispots
-  linkedin: https://www.linkedin.com/in/spilio
+  linkedin: https://www.linkedin.com/in/xrysanthos/
   google:
     analytics: UA-57180016-1
 
